--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ org.gradle.configuration-cache=false
 minecraft_version=1.21.10
 loader_version=0.17.3
 loom_version=1.13-SNAPSHOT
+yarn_mappings=1.21.10+build.2
 
 # Mod Properties
 mod_version=1.0.0
