--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,13 @@
 # against bad commits.
 
 name: build
-on: [pull_request, push]
+on:
+  pull_request: 
+  push: 
+    branches:
+      - main
+    paths-ignore:
+      - '**.md'
 
 jobs:
   build:
