--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,5 +46,5 @@ jobs:
       - name: capture build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
+          name: ${{ steps.version.outputs.branchName }}-${{ steps.version.outputs.majorMinorPatch}}-${{ steps.version.outputs.commitsSinceVersionSource }}
           path: build/libs/
