--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/zulu-17.jdk/Contents/Home
 
 # IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
 org.gradle.configuration-cache=false
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.1
+minecraft_version=1.20.1
 loader_version=0.15.11
 loom_version=1.8-SNAPSHOT
-yarn_mappings=1.21+build.2
+yarn_mappings=1.20.1+build.10
 
 # Mod Properties
 maven_group=de.zannagh.armorhider
@@ -18,5 +19,5 @@ archives_base_name=armor-hider
 
 
 # Dependencies
-fabric_version=0.107.0+1.21.1
+fabric_version=0.92.2+1.20.1
 mod_loader=fabric
