feat: backport recent changes (#41, #42) to 1.21.10 (#46)
* feat: advanced settings and toggles (#41)

* moves administrative and advanced settings to an additional screen
* adds toggles for disabling armor hider temporarily, forcing it "off" on a server
* gives the user the option to decide whether their settings or defaults should be used for unknown players (unmodded server or players not using the mod)
* adds option to disable armor hider for other players but keep it enabled for the local user
* adds the option for admins to disable armor hider entirely on their server

(cherry picked from commit 5a92314151e4656cf12192b2ba7e6b6cbd70233c)

* fix: fix player name being null on local player render and closes #40 via additional WrapOperation to prevent render call when items should be hidden (#42)

(cherry picked from commit fd6fe2065ddf151345076f786740e81541b9efe1)

* chore: revert accidental 26.1 preview changes to build

(cherry picked from commit 420f9b570029c47062c65c5e56a76ae894251629)

* feat: remaining backport conflicts and translations due to API changes

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,10 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
 	// If you remove this line, sources will not be generated.
