--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,11 +41,21 @@ jobs:
         if: ${{ github.event_name != 'release' }}
         run: ./gradlew build -PsemVer="${{ steps.version.outputs.majorMinorPatch }}-${{ steps.version.outputs.commitsSinceVersionSource }}" -Pprerelease="true"
 
-      - name: capture build artifacts
+      - name: capture 1.21.9 build artifacts
         uses: actions/upload-artifact@v6
         with:
-          name: build-output
-          path: build/libs/
+          name: 1.21.9-${{ steps.version.outputs.majorMinorPatch }}
+          path: versions/1.21.10/build/libs/
+      - name: capture 1.21.10 build artifacts
+        uses: actions/upload-artifact@v6
+        with:
+          name: 1.21.10-${{ steps.version.outputs.majorMinorPatch }}
+          path: versions/1.21.10/build/libs/
+      - name: capture 1.21.11 build artifacts
+        uses: actions/upload-artifact@v6
+        with:
+          name: 1.21.11-${{ steps.version.outputs.majorMinorPatch }}
+          path: versions/1.21.11/build/libs/
   
   upload:
     if: ${{ github.event_name == 'release' }}
