--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,8 +41,8 @@ jobs:
         if: ${{ github.event_name == 'release' && contains(github.event.release.name, 'preview') }}
         id: preview
         run: |
-          PREVIEW_NUM=$(echo "${{ github.event.release.name }}" | grep -oE '[0-9]+$')
-          echo "number=$PREVIEW_NUM" >> $GITHUB_OUTPUT
+          PREVIEW_NUM=$(echo "${{ github.event.release.name }}" | grep -oE '[0-9]+$' || true)
+          echo "number=${PREVIEW_NUM:-1}" >> $GITHUB_OUTPUT
 
       - name: buildPreview
         if: ${{ github.event_name == 'release' && contains(github.event.release.name, 'preview') }}
