--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,57 +1,60 @@
-# Automatically build the project and run any configured tests for every push
-# and submitted pull request. This can help catch issues that only occur on
-# certain platforms or Java versions, and provides a first line of defence
-# against bad commits.
+# Build validation for pull requests.
+# Ensures the project compiles and tests pass.
 
-name: build
+name: Build
+
 on:
   pull_request:
-  push:
-    branches:
-      - main
-      - 'release/**'
     paths-ignore:
       - '**.md'
+      - 'docs/**'
+
+# Cancel in-progress runs for the same PR
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    name: Build & Test
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout repository
+      - name: Checkout
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      - name: validate gradle wrapper
+
+      - name: Validate Gradle Wrapper
         uses: gradle/actions/wrapper-validation@v5
-      - name: setup jdk
+
+      - name: Setup JDK
         uses: actions/setup-java@v5
         with:
           java-version: '25'
-          distribution: 'microsoft'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
+
       - name: Setup GitVersion
         uses: gittools/actions/gitversion/setup@v4.2.0
         with:
-          versionSpec: 6.5.0
+          versionSpec: '6.x'
 
-      - name: Set Version Properties
+      - name: Calculate Version
         id: version
         uses: gittools/actions/gitversion/execute@v4.2.0
 
-      - name: make gradle wrapper executable
-        run: chmod +x ./gradlew
-
-      - name: build
-        run: ./gradlew build -PsemVer="${{ steps.version.outputs.majorMinorPatch }}-${{ steps.version.outputs.commitsSinceVersionSource }}" -Pprerelease="True"
-
-      - name: sanitize branch name
-        id: branch
+      - name: Build
         run: |
-          SAFE_BRANCH="${{ steps.version.outputs.branchName }}"
-          SAFE_BRANCH="${SAFE_BRANCH//\//-}"
-          echo "value=$SAFE_BRANCH" >> "$GITHUB_OUTPUT"
+          chmod +x ./gradlew
+          ./gradlew build \
+            -PsemVer="${{ steps.version.outputs.fullSemVer }}" \
+            -Pprerelease="true"
 
-      - name: capture build artifacts
+      - name: Upload Build Artifacts
         uses: actions/upload-artifact@v6
         with:
-          name: armor-hider-${{ steps.version.outputs.majorMinorPatch }}-${{ steps.version.outputs.commitsSinceVersionSource }}
-          path: versions/**/build/libs/
+          name: armor-hider-${{ steps.version.outputs.fullSemVer }}
+          path: versions/**/build/libs/*.jar
+          if-no-files-found: warn
